--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,22 @@ body {
     margin: 0;
     padding: 0;
   }
-  
+/* styles.css */
+
+.ver_btn {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 50px; /* Hace que el botón sea redondeado */
+  margin-bottom: 20px;
+}
+
+.ver_btn:hover {
+  background-color: darkred;
+}
+ 
   .container {
     max-width: 500px;
     margin: 50px auto;
@@ -57,4 +72,3 @@ body {
   button:hover {
     background-color: #45a049;
   }
-  
